unpackaged/main/default/objects/Account/fields/Auth0_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Auth0_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth0 Blocked</label>
    <type>Checkbox</type>
</CustomField>