unpackaged/main/default/objects/Account/fields/Auth0_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Auth0_Last_Login__c</fullName>
    <label>Auth0 Last Login</label>
    <type>DateTime</type>
</CustomField>