unpackaged/main/default/objects/Account/fields/Auth0_Logins_Count__c.field-meta.xml
<CustomField>
    <fullName>Auth0_Logins_Count__c</fullName>
    <label>Auth0 Logins Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>