unpackaged/main/default/objects/Account/fields/Auth0_Mobile_Verified__c.field-meta.xml
<CustomField>
    <fullName>Auth0_Mobile_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth0 Mobile Verified</label>
    <type>Checkbox</type>
</CustomField>