unpackaged/main/default/objects/Account/fields/Auth0_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Auth0_User_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Auth0 User ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>