unpackaged/main/default/objects/Account/fields/DiscountPeriodMonth__c.field-meta.xml
<CustomField>
    <fullName>DiscountPeriodMonth__c</fullName>
    <label>Discount Period (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>