unpackaged/main/default/objects/Account/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>