unpackaged/main/default/objects/Account/fields/DriversLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>DriversLicenseNumber__c</fullName>
    <label>Drivers License Number (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>