unpackaged/main/default/objects/Account/fields/DriversLicenseState__c.field-meta.xml
<CustomField>
    <fullName>DriversLicenseState__c</fullName>
    <label>Drivers License State (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>