unpackaged/main/default/objects/Account/fields/EConsentOptOut__c.field-meta.xml
<CustomField>
    <fullName>EConsentOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only refers to delivery of statements / default notices</inlineHelpText>
    <label>E-Consent Opt Out (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>