unpackaged/main/default/objects/Account/fields/FamilyFriendsDiscount__c.field-meta.xml
<CustomField>
    <fullName>FamilyFriendsDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family &amp; Friends Discount</label>
    <type>Checkbox</type>
</CustomField>