unpackaged/main/default/objects/Account/fields/GlobalOptOut__c.field-meta.xml
<CustomField>
    <fullName>GlobalOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the record has opted out from all commercial communication</description>
    <label>Global Opt Out (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>