unpackaged/main/default/objects/Account/fields/HayCustomerID__c.field-meta.xml
<CustomField>
    <fullName>HayCustomerID__c</fullName>
    <description>HAY Customer ID</description>
    <label>HayCustomer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>