unpackaged/main/default/objects/Account/fields/IdentityID__c.field-meta.xml
<CustomField>
    <fullName>IdentityID__c</fullName>
    <label>Identity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>