unpackaged/main/default/objects/Account/fields/IdentityResultDate__c.field-meta.xml
<CustomField>
    <fullName>IdentityResultDate__c</fullName>
    <label>Identity Result Date</label>
    <type>DateTime</type>
</CustomField>