unpackaged/main/default/objects/Account/fields/IdentityResultVOI__c.field-meta.xml
<CustomField>
    <fullName>IdentityResultVOI__c</fullName>
    <label>Identity Result VOI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>UNCHECKED</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>