unpackaged/main/default/objects/Account/fields/IdentitySMSURL__c.field-meta.xml
<CustomField>
    <fullName>IdentitySMSURL__c</fullName>
    <label>Deprecate Identity SMS URL</label>
    <type>Url</type>
</CustomField>