unpackaged/main/default/objects/Account/fields/IdentityVOILinkSentDate__c.field-meta.xml
<CustomField>
    <fullName>IdentityVOILinkSentDate__c</fullName>
    <description>This field will be used to identify if and when VOI link has been sent to the customer to ensure we don’t send SMS to customer every time we call Frankie for the status of KYC/VOI/AML.</description>
    <inlineHelpText>This field will be used to identify if and when VOI link has been sent to the customer</inlineHelpText>
    <label>Identity VOI Link Sent Date</label>
    <type>DateTime</type>
</CustomField>