unpackaged/main/default/objects/Account/fields/LastLogin__c.field-meta.xml
<CustomField>
    <fullName>LastLogin__c</fullName>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>