unpackaged/main/default/objects/Account/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>