unpackaged/main/default/objects/Account/fields/MarketingOptOut__c.field-meta.xml
<CustomField>
    <fullName>MarketingOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Opt Out (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>