unpackaged/main/default/objects/Account/fields/MarketingPause__c.field-meta.xml
<CustomField>
    <fullName>MarketingPause__c</fullName>
    <inlineHelpText>This imitates the ‘Marketing opt out’ flag, but only for a selected time period</inlineHelpText>
    <label>Marketing Pause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>Custom date range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>