unpackaged/main/default/objects/Account/fields/MarketingPauseEndDate__c.field-meta.xml
<CustomField>
    <fullName>MarketingPauseEndDate__c</fullName>
    <label>Marketing Pause End Date</label>
    <type>Date</type>
</CustomField>