unpackaged/main/default/objects/Account/fields/MarketingPauseStartDate__c.field-meta.xml
<CustomField>
    <fullName>MarketingPauseStartDate__c</fullName>
    <label>Marketing Pause Start Date</label>
    <type>Date</type>
</CustomField>