unpackaged/main/default/objects/Account/fields/MobileOptOut__c.field-meta.xml
<CustomField>
    <fullName>MobileOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the record has opted out from commercial SMS</description>
    <label>Mobile Opt Out (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>