unpackaged/main/default/objects/Account/fields/NewCustomerDiscount__c.field-meta.xml
<CustomField>
    <fullName>NewCustomerDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Discount</label>
    <type>Checkbox</type>
</CustomField>