unpackaged/main/default/objects/Account/fields/NumberOfDependents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDependents__c</fullName>
    <label>NumberOfDependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>