unpackaged/main/default/objects/Account/fields/PaymentID__c.field-meta.xml
<CustomField>
    <fullName>PaymentID__c</fullName>
    <description>HAY Payments ID</description>
    <label>Payment ID (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>