unpackaged/main/default/objects/Account/fields/PostOptOut__c.field-meta.xml
<CustomField>
    <fullName>PostOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the record has opted out from commercial post</description>
    <label>Post Opt Out (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>