unpackaged/main/default/objects/Account/fields/WaitlistDiscount__c.field-meta.xml
<CustomField>
    <fullName>WaitlistDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waitlist Discount</label>
    <type>Checkbox</type>
</CustomField>