unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_PHONE3</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>ExternalId__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>HayCustomerID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>